# mt5bby

./: .gitignore  README.md  start.sh
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: advanced_analysis.py  ai_engine.py  indicators.py  main.py  models.py  price_feed.py  signals.py  simulation_engine.py  tradingview_feed.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AIChat.tsx  AIDecisionPanel.tsx  AdvancedAnalysisPanel.tsx  BackendLogs.tsx  Gauge.tsx  IndicatorTable.tsx  OrderBook.tsx  PivotTable.tsx  PnLSimulator.tsx  PriceTicker.tsx  SignalPanel.tsx  SignalProducer.tsx  SimulationCard.tsx  StatsPanel.tsx  Watchlist.tsx
frontend/src/hooks/: useWebSocket.ts
