[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.135.2"}
psycopg = {extras = ["binary"], version = "^3.3.3"}
websockets = "^16.0"
numpy = "^2.4.3"
aiohttp = "^3.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
